tests/ui/parser/issues/issue-99910-const-let-mutually-exclusive.stderr
error: `const` and `let` are mutually exclusive
  --> $DIR/issue-99910-const-let-mutually-exclusive.rs:4:5
   |
LL |     const let _FOO: i32 = 123;
   |     ^^^^^^^^^
   |
help: remove `let`
   |
LL -     const let _FOO: i32 = 123;
LL +     const _FOO: i32 = 123;
   |

error: `const` and `let` are mutually exclusive
  --> $DIR/issue-99910-const-let-mutually-exclusive.rs:6:5
   |
LL |     let const _BAR: i32 = 123;
   |     ^^^^^^^^^
   |
help: remove `let`
   |
LL -     let const _BAR: i32 = 123;
LL +     const _BAR: i32 = 123;
   |

error: aborting due to 2 previous errors

